🚀 v3.0 完全統合版リリース: 青空文庫システム + 手動追加機能 + 大規模クリーンアップ
✨ 新機能
- 手動データ追加システム完成 (bungo_map/cli/add.py)
  - 作者・作品・地名の個別追加機能
  - 対話式入力モード対応
  - テンプレート表示機能
- 青空文庫自動構築システム完成 (bungo_map/cli/aozora.py)
- 統合CLIエントリーポイント (main.py)

📚 ドキュメント更新
- README.md 大幅更新
  - 手動追加機能の詳細説明
  - 3つのデータ追加方法体系化
  - 実用的な使用例追加

🧹 大規模クリーンアップ
- Legacy スクリプト 21ファイル削除
- 古いテスト・出力ファイル削除
- 重複・不要ファイル除去 (~50MB削減)
- __pycache__ ディレクトリ全削除

🏗️ システム構成改善
- 単一エントリーポイント化
- モジュラー設計完成
- データベース統合管理

現在の統計: 作家21名、作品178件、地名1,924箇所
青空文庫 19,356作品完全アクセス対応

--- a/.gitignore
+++ b/.gitignore
@@ -48,10 +48,14 @@ ENV/
 .coverage
 htmlcov/
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Database (commented out to include data files)
+# *.db
+# *.sqlite
+# *.sqlite3
+
+# Database backups (exclude backup files)
+*backup*.db
+*_backup_*.db
 
 # Logs
 *.log
