🧹 v3.0プロジェクト構造最適化: 不要ファイル削除・整理完了 - 削除: 14ファイル(テスト・デバッグ・旧クリーンアップファイル) - 追加: 統合システム拡張機能・設定ファイル - クリーンアップ: __pycache__・空ディレクトリ除去 - 最適化: 保守性向上・構造簡潔化 - 保持: tests/・docs/・config/(今後拡張用)

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,20 @@ ENV/
 .venv/
 .env/
 
+# Environment Configuration
+.env
+.env.local
+.env.*.local
+env.production
+.config/
+
+# API Keys & Secrets (重要!)
+*api_key*
+*secret*
+*token*
+config.json
+secrets.json
+
 # IDE
 .vscode/
 .idea/
