--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,13 @@ tqdm>=4.66.0
 rich>=13.0.0
 
 # === CLI & Async ===
-click>=8.1.0
+click>=8.0.0
 aiohttp>=3.9.0
 asyncio
 
 # === AI & Machine Learning ===
-openai==0.28.1
+openai>=1.0.0
 
 # === Development & Testing ===
-pytest>=7.4.0 
+pytest>=7.0.0
+pytest-mock>=3.10.0 
